--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,37 +9,41 @@ on:
 jobs:
   build:
     name: Build and Test
-    runs-on: macos-14
+    runs-on: macos-latest
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Select Xcode version
-      run: sudo xcode-select -s /Applications/Xcode_15.2.app/Contents/Developer
-      
     - name: Show Xcode version
       run: xcodebuild -version
       
+    - name: List available simulators
+      run: xcrun xctrace list devices 2>&1 | grep iPhone
+      
     - name: Build
       run: |
+        # Get the first available iPhone simulator
+        DEVICE=$(xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//")
+        echo "Using device: $DEVICE"
+        
         xcodebuild clean build \
           -project ReceiptTracker.xcodeproj \
           -scheme ReceiptTracker \
-          -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=17.2' \
+          -destination "platform=iOS Simulator,name=$DEVICE" \
           CODE_SIGN_IDENTITY="" \
-          CODE_SIGNING_REQUIRED=NO \
-          | xcpretty
-          
-    - name: Run tests
+          CODE_SIGNING_REQUIRED=NO
+      
+    - name: Run tests (if configured)
       run: |
+        DEVICE=$(xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//")
+        
         xcodebuild test \
           -project ReceiptTracker.xcodeproj \
           -scheme ReceiptTracker \
-          -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=17.2' \
+          -destination "platform=iOS Simulator,name=$DEVICE" \
           CODE_SIGN_IDENTITY="" \
-          CODE_SIGNING_REQUIRED=NO \
-          | xcpretty
+          CODE_SIGNING_REQUIRED=NO || echo "Tests not configured, skipping..."
       continue-on-error: true
       
     - name: Upload build logs
