--- a/.github/workflows/build-deepseek-ocr.yml
+++ b/.github/workflows/build-deepseek-ocr.yml
@@ -21,6 +21,21 @@ jobs:
       packages: write
 
     steps:
+    - name: Free up disk space
+      run: |
+        echo "=== Before cleanup ==="
+        df -h
+        
+        # Remove unnecessary files to free up space
+        sudo rm -rf /usr/share/dotnet
+        sudo rm -rf /usr/local/lib/android
+        sudo rm -rf /opt/ghc
+        sudo rm -rf /opt/hostedtoolcache/CodeQL
+        sudo docker system prune -af
+        
+        echo "=== After cleanup ==="
+        df -h
+    
     - name: Checkout repository
       uses: actions/checkout@v4
 
@@ -56,6 +71,9 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
+        # Don't load image locally to save disk space
+        provenance: false
+        sbom: false
 
     - name: Image digest
       run: echo ${{ steps.meta.outputs.digest }}
