refactor: graph ql to rest api call to runpod api

--- a/.github/workflows/build-on-runpod-automated.yml
+++ b/.github/workflows/build-on-runpod-automated.yml
@@ -25,7 +25,7 @@ jobs:
     
     - name: Install dependencies
       run: |
-        pip install runpod paramiko
+        pip install requests paramiko
     
     - name: Verify RunPod API Key
       run: |
