--- a/Dockerfile.deepseek.prebuilt
+++ b/Dockerfile.deepseek.prebuilt
@@ -22,7 +22,8 @@ EXPOSE 5003
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD curl -f http://localhost:5003/health || exit 1
 
-# Run server
-CMD ["python", "deepseek_ocr_server.py"]
+# Override base image's ENTRYPOINT and CMD
+ENTRYPOINT []
+CMD ["python3", "/app/deepseek_ocr_server.py"]
 
 
