fix: use CUDA base + vLLM nightly install (avoids disk space issue)

--- a/Dockerfile.deepseek.prebuilt
+++ b/Dockerfile.deepseek.prebuilt
@@ -1,16 +1,27 @@
-# Dockerfile for DeepSeek-OCR Server using pre-built vLLM image
-# This is MUCH simpler and faster than building vLLM from scratch!
-# Use this if you want to build quickly on RunPod
-# Build date: 2025-10-26
+# Dockerfile for DeepSeek-OCR Server with vLLM nightly
+# Uses CUDA base and installs vLLM nightly for DeepSeek-OCR support
 
-FROM vllm/vllm-openai:latest
+FROM nvidia/cuda:12.1.0-devel-ubuntu22.04
 
-# Upgrade vLLM to nightly for DeepSeek-OCR support
-RUN pip install --no-cache-dir --upgrade vllm --pre --extra-index-url https://wheels.vllm.ai/nightly
+# Prevent interactive prompts
+ENV DEBIAN_FRONTEND=noninteractive
 
-# Install Flask for REST API
-# Use --ignore-installed to handle distutils-installed blinker
-RUN pip install --no-cache-dir --ignore-installed blinker flask pillow
+# Install Python and essential tools
+RUN apt-get update && apt-get install -y \
+    python3.10 \
+    python3-pip \
+    curl \
+    git \
+    && rm -rf /var/lib/apt/lists/*
+
+# Upgrade pip
+RUN pip3 install --no-cache-dir --upgrade pip
+
+# Install vLLM nightly with DeepSeek-OCR support
+RUN pip3 install --no-cache-dir vllm --pre --extra-index-url https://wheels.vllm.ai/nightly
+
+# Install Flask and dependencies
+RUN pip3 install --no-cache-dir flask pillow
 
 # Set working directory
 WORKDIR /app
@@ -25,8 +36,7 @@ EXPOSE 5003
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
     CMD curl -f http://localhost:5003/health || exit 1
 
-# Override base image's ENTRYPOINT and CMD
-ENTRYPOINT []
+# Run server
 CMD ["python3", "/app/deepseek_ocr_server.py"]
 
 
