fix: disable Docker cache to save disk space during build

--- a/.github/workflows/build-deepseek-ocr.yml
+++ b/.github/workflows/build-deepseek-ocr.yml
@@ -69,8 +69,8 @@ jobs:
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+        # Disable cache to save disk space
+        no-cache: true
         # Don't load image locally to save disk space
         provenance: false
         sbom: false
