--- a/.github/workflows/build-deepseek-ocr.yml
+++ b/.github/workflows/build-deepseek-ocr.yml
@@ -15,29 +15,54 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04  # Use older version for more space
     permissions:
       contents: read
       packages: write
 
     steps:
-    - name: Free up disk space
+    - name: Check disk space before
+      run: df . -h
+    
+    - name: Aggressive disk cleanup
       run: |
-        echo "=== Before cleanup ==="
-        df -h
+        echo "=== Removing Docker images ==="
+        sudo docker rmi $(docker image ls -aq) >/dev/null 2>&1 || true
         
-        # Remove unnecessary files to free up space
-        sudo rm -rf /usr/share/dotnet
-        sudo rm -rf /usr/local/lib/android
-        sudo rm -rf /opt/ghc
-        sudo rm -rf /opt/hostedtoolcache/CodeQL
-        sudo docker system prune -af
+        echo "=== Removing large directories ==="
+        sudo rm -rf \
+          /usr/share/dotnet /usr/local/lib/android /opt/ghc \
+          /usr/local/share/powershell /usr/share/swift /usr/local/.ghcup \
+          /usr/lib/jvm /opt/hostedtoolcache/CodeQL || true
         
+        echo "=== Purging packages ==="
+        sudo apt-get update >/dev/null 2>&1
+        sudo apt-get purge -y \
+          '^mongodb-.*' '^mysql-.*' '^postgresql-.*' '^dotnet-.*' \
+          azure-cli google-chrome-stable firefox \
+          google-cloud-sdk microsoft-edge-stable \
+          >/dev/null 2>&1 || true
+        
+        sudo apt-get autoremove -y >/dev/null 2>&1
+        sudo apt-get autoclean -y >/dev/null 2>&1
+        sudo apt-get clean >/dev/null 2>&1
+        
+    - name: Check disk space after cleanup
+      run: |
         echo "=== After cleanup ==="
         df -h
+        echo "=== Largest packages ==="
+        sudo dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -nr | head -20
     
     - name: Checkout repository
       uses: actions/checkout@v4
+    
+    - name: Remove .git to save space
+      run: |
+        df . -h
+        sudo rm -rf ${GITHUB_WORKSPACE}/.git
+        echo "=== After removing .git ==="
+        df . -h
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
