--- a/.github/workflows/build-deepseek-ocr.yml
+++ b/.github/workflows/build-deepseek-ocr.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04  # Use older version for more space
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
